Fix link overflow and bg gradient height

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -173,7 +173,7 @@
 
         a {
 
-            @apply font-medium underline decoration-sky-600 underline-offset-(--offset);
+            @apply font-medium underline decoration-sky-600 underline-offset-(--offset) break-words;
 
             transition: --offset 250ms;
             text-decoration-skip-ink: none;
